--- a/Inicio/static/Inicio/css/estilo-index.css
+++ b/Inicio/static/Inicio/css/estilo-index.css
@@ -3,12 +3,13 @@
 {
     margin: 0;
     padding: 0;
-    font-family: 'Quicksand','Open Sans', 'Helvetica Neue'
+    font-family: 'Bebas Neue', cursive;
 }
 body{
     
-    background-color: rgb(40, 3, 126);
-    text-align: center;    
+    background-color: #1e2126;
+    text-align: center;   
+    font-family: 'Bebas Neue', cursive;
 }
 /*Barra de navegación*/
 .navegacion{
@@ -16,7 +17,7 @@ body{
 }
 /*Cabecera de la página (Idealmente una imagen)*/
 .img-hd{
-    background-image: url('/static/Inicio/img/img-index/header.jpg');
+    background-image: url('/static/Inicio/img/img-index/MBK.png');
     width: auto;
     height: 400px;
     background-position: center;
