--- a/Inicio/templates/Inicio/registrarse.html
+++ b/Inicio/templates/Inicio/registrarse.html
@@ -16,6 +16,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200&family=Spartan:wght@300;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Open+Sans:wght@400;600&display=swap"
+    rel="stylesheet">
     
     <link rel="stylesheet" href="{% static 'Inicio/css/estilo-registro.css' %}">
     
@@ -26,9 +28,9 @@
   </head>
   <body class="bg-dark">
         <header>
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
                 <div class="container-fluid">
-                  <a class="navbar-brand fw-bold" href="/index.html">HSC<br>Componentes</a>
+                  <a class="navbar-brand fw-bold" href="/index.html" id="fuente">MBK</a>
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                   </button>
@@ -104,32 +106,18 @@
             <div class="col-lg-7 d-none d-lg-block ">
                 <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-indicators">
-                      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                      
                     
                     </div>
-                    <div class="carousel-inner">
+
                       <div class="carousel-item img-1 min-vh-100 active">
                         <div class="carousel-caption d-none d-md-block">
-                          <h5>¡Tenemos los mejores productos del mercado</h5>
-                          <p>Recuerda siempre revisar el stock antes de comprar cualquiera de nuestros productos :)</p>
+                          <h5></h5>
+                          <p></p>
                         </div>
                       </div>
-                      <div class="carousel-item img-2 min-vh-100">
-                        <div class="carousel-caption d-none d-md-block">
-                          <h5>Tenemos las mejores novedades para ti</h5>
-                          <p>¿Sabes que es importante a la hora de comprar los componentes de tu pc? comprarlo en HSC Componentes. </p>
-                        </div>
-                      </div>
-                    </div>
-                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                      <span class="visually-hidden">Previous</span>
-                    </button>
-                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                      <span class="visually-hidden">Next</span>
-                    </button>
+
+
                   </div>
             </div>
             <div class="col-lg-5 d-flex flex-column aling-items-end min-vh-100">
@@ -149,7 +137,7 @@
 
                         {% endif %}
                         <div class="mb-2">
-                          <label for="exampleInputEmail1" class="form-label font-weight-bold">Nombre de usuario<span class="text-danger"> *</span></label>
+                          <label for="exampleInputEmail1" class="form-label font-weight-bold">Usuario<span class="text-danger"> *</span></label>
                           <input type="text" class="form-control" name="usuario" placeholder="Ej: carlos-fabres_celis" id="usuario">
                           <p>
                             <b>
@@ -180,10 +168,10 @@
                         <div class="mb-1">
                           <label for="exampleInputPassword1" class="form-label font-weight-bold" >Región<span class="text-danger"> *</span></label>
                           <select class="form-select" aria-label="Disabled select example" name="region" id ="region" required>
-                                {% for x in regiones_m %}
+                              {% for x in regiones_m %}
                                 <option selected>Selecciona una región</option>
                                 <option value="{{ x.idRegion }}">{{ x.nombreReg }}</option>
-                             {% endfor %}
+                              {% endfor %}
                             
                             
                           </select>
