--- a/Inicio/static/Inicio/css/estilo-index.css
+++ b/Inicio/static/Inicio/css/estilo-index.css
@@ -3,13 +3,12 @@
 {
     margin: 0;
     padding: 0;
-    font-family: 'Bebas Neue', cursive;
+    font-family: 'Quicksand','Open Sans', 'Helvetica Neue'
 }
 body{
     
-    background-color: #1e2126;
-    text-align: center;   
-    font-family: 'Bebas Neue', cursive;
+    background-color: rgb(40, 3, 126);
+    text-align: center;    
 }
 /*Barra de navegación*/
 .navegacion{
@@ -17,7 +16,7 @@ body{
 }
 /*Cabecera de la página (Idealmente una imagen)*/
 .img-hd{
-    background-image: url('/static/Inicio/img/img-index/MBK.png');
+    background-image: url('/static/Inicio/img/img-index/header.jpg');
     width: auto;
     height: 400px;
     background-position: center;
