--- a/Inicio/templates/Inicio/inicio_sesion.html
+++ b/Inicio/templates/Inicio/inicio_sesion.html
@@ -14,8 +14,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Open+Sans:wght@400;600&display=swap"
-    rel="stylesheet">
     <!--Font Awesome para los icons-->
     <script src="https://kit.fontawesome.com/1877fd7acc.js" crossorigin="anonymous"></script>
   
@@ -24,9 +22,9 @@
   </head>
   <body class="bg-dark">
         <header>
-            <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <div class="container-fluid">
-                  <a class="navbar-brand fw-bold" href="{% url 'inicio' %}" id="fuente">MBK</a>
+                  <a class="navbar-brand fw-bold" href="{% url 'inicio' %}">HSC<br>Componentes</a>
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                   </button>
@@ -102,18 +100,32 @@
             <div class="col-lg-7 d-none d-lg-block ">
                 <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-indicators">
+                      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
                     
                     </div>
-
+                    <div class="carousel-inner">
                       <div class="carousel-item img-1 min-vh-100 active">
                         <div class="carousel-caption d-none d-md-block">
-                          <h5></h5>
-                          <p></p>
+                          <h5>¡Tenemos los mejores productos del mercado</h5>
+                          <p>Recuerda siempre revisar el stock antes de comprar cualquiera de nuestros productos :)</p>
                         </div>
                       </div>
-                      
-
-                    
+                      <div class="carousel-item img-2 min-vh-100">
+                        <div class="carousel-caption d-none d-md-block">
+                          <h5>Tenemos las mejores novedades para ti</h5>
+                          <p>¿Sabes que es importante a la hora de comprar los componentes de tu pc? comprarlo en HSC Componentes. </p>
+                        </div>
+                      </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Next</span>
+                    </button>
                   </div>
             </div>
             <div class="col-lg-5 d-flex flex-column aling-items-end min-vh-100">
