--- a/Inicio/templates/Inicio/plantMain.html
+++ b/Inicio/templates/Inicio/plantMain.html
@@ -21,8 +21,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Open+Sans:wght@400;600&display=swap"
-    rel="stylesheet">
 
 
 
@@ -34,76 +32,79 @@
     <header>
         <p style="display: none">{{usuario.username}}</p>
 
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-          <div class="container-fluid">
-            <a class="navbar-brand fw-bold" href="{% url 'inicio' %}" id="fuente">MBK</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
-                <li class="nav-item ">
-                    <a class="nav-link active " aria-current="page" href="{% url 'inicio' %}"><i class="fa-solid fa-house "></i>
-                        Inicio</a>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"><i class="fa-solid fa-bag-shopping"></i> Tienda</a></a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      {% if usuario %}
-                        <li><a class="dropdown-item" href="{% url 'mostrarMic' usuario.username %}">Micrófonos</a></li>
-                      {% else %} 
-                        <li><a class="dropdown-item" href="{% url 'iniciar' %}">Micrófonos</a></li>
-                      {% endif %}
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+                <a class="navbar-brand fw-bold text-center" href="{% url 'inicio' %}">HSC<br>Componentes</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse " id="navbarSupportedContent">
+                    
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
+                        <li class="nav-item ">
+                            <a class="nav-link active " aria-current="page" href="{% url 'inicio' %}"><i class="fa-solid fa-house "></i>
+                                Inicio</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"><i class="fa-solid fa-bag-shopping"></i> Tienda</a></a>
+                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                              {% if usuario %}
+                                <li><a class="dropdown-item" href="{% url 'mostrarMic' usuario.username %}">Micrófonos</a></li>
+                              {% else %} 
+                                <li><a class="dropdown-item" href="{% url 'iniciar' %}">Micrófonos</a></li>
+                              {% endif %}
 
-                      {% if usuario %}
-                        <li><a class="dropdown-item" href="{% url 'teclados'  usuario.username %}">Teclados</a></li>
-                      {% else %}
-                        <li><a class="dropdown-item" href="{% url 'iniciar' %}">Teclados</a></li> 
-                      {% endif %}
+                              {% if usuario %}
+                                <li><a class="dropdown-item" href="{% url 'teclados'  usuario.username %}">Teclados</a></li>
+                              {% else %}
+                                <li><a class="dropdown-item" href="{% url 'iniciar' %}">Teclados</a></li> 
+                              {% endif %}
 
-                      {% if usuario %}
-                        <li><a class="dropdown-item" href="{% url 'mostrarMouse' usuario.username %}">Mouse Gamer</a></li>
-                      {% else %}
-                        <li><a class="dropdown-item" href="{% url 'iniciar' %}">Mouse Gamer</a></li> 
-                      {% endif %}
+                              {% if usuario %}
+                                <li><a class="dropdown-item" href="{% url 'mostrarMouse' usuario.username %}">Mouse Gamer</a></li>
+                              {% else %}
+                                <li><a class="dropdown-item" href="{% url 'iniciar' %}">Mouse Gamer</a></li> 
+                              {% endif %}
 
-                      {% if usuario %}
-                        <li><a class="dropdown-item" href="{% url 'mostrarGrafica' usuario.username  %}">Tarjetas gráficas</a></li>
-                      {% else %} 
-                        <li><a class="dropdown-item" href="{% url 'iniciar' %}">Tarjetas gráficas</a></li>
-                      {% endif %}
+                              {% if usuario %}
+                                <li><a class="dropdown-item" href="{% url 'mostrarGrafica' usuario.username  %}">Tarjetas gráficas</a></li>
+                              {% else %} 
+                                <li><a class="dropdown-item" href="{% url 'iniciar' %}">Tarjetas gráficas</a></li>
+                              {% endif %}
 
-                      {% if usuario %}
-                        <li><a class="dropdown-item" href="{% url 'mostrarProcesador' usuario.username  %}">Procesadores</a></li>
-                      {% else %}
-                        <li><a class="dropdown-item" href="{% url 'iniciar' %}">Procesadores</a></li> 
-                      {% endif %}
+                              {% if usuario %}
+                                <li><a class="dropdown-item" href="{% url 'mostrarProcesador' usuario.username  %}">Procesadores</a></li>
+                              {% else %}
+                                <li><a class="dropdown-item" href="{% url 'iniciar' %}">Procesadores</a></li> 
+                              {% endif %}
 
-                      {% if usuario %}
-                        <li><a class="dropdown-item" href="{% url 'mostrarRam' usuario.username%}">Memorias</a></li>
-                      {% else %}
-                        <li><a class="dropdown-item" href="{% url 'iniciar' %}">Memorias</a></li> 
-                      {% endif %}
+                              {% if usuario %}
+                                <li><a class="dropdown-item" href="{% url 'mostrarRam' usuario.username%}">Memorias</a></li>
+                              {% else %}
+                                <li><a class="dropdown-item" href="{% url 'iniciar' %}">Memorias</a></li> 
+                              {% endif %}
+                            </ul>
+                          </li>
+                        <li class="nav-item">
+                            {% if usuario %}
+                                <a class="nav-link active " aria-current="page" href="{% url 'miperfil' usuario.username %}"><i class="fa-solid fa-user"></i>{{usuario.username}}</a>
+                            {% else %}
+                                <a class="nav-link active " aria-current="page" href="{% url 'iniciar' %}"><i class="fa-solid fa-user"></i> Iniciar Sesion</a>
+                            {% endif %}
+                        </li>
+                        <li class="nav-item">
+                            {% if usuario %}
+                            <a class="nav-link active" aria-current="page" href="{%url 'carrito' usuario.username %}"> Carrito</a>
+                            {% else %}
+                            <a class="nav-link active" aria-current="page" href="#"> Carrito</a>
+                            {% endif %}
+                        </li>
+
                     </ul>
-                  </li>
-                <li class="nav-item">
-                    {% if usuario %}
-                        <a class="nav-link active " aria-current="page" href="{% url 'miperfil' usuario.username %}"><i class="fa-solid fa-user"></i>{{usuario.username}}</a>
-                    {% else %}
-                        <a class="nav-link active " aria-current="page" href="{% url 'iniciar' %}"><i class="fa-solid fa-user"></i> Iniciar Sesion</a>
-                    {% endif %}
-                </li>
-                <li class="nav-item">
-                    {% if usuario %}
-                    <a class="nav-link active" aria-current="page" href="{%url 'carrito' usuario.username %}"> Carrito</a>
-                    {% else %}
-                    <a class="nav-link active" aria-current="page" href="#"> Carrito</a>
-                    {% endif %}
-                </li>
-
-            </ul>
+                </div>
             </div>
-          </div>
         </nav>
         {% block imagen %}
     
@@ -123,10 +124,10 @@
     
                     <div class="col-6">
                         <div class="box">
-                            <h2>Acerca de nosotros</h2>
+                            <h2>Sobre nosotros</h2>
                             <ul class="lista">
-                                <li>Contactanos en MBK@DUOCUC.CL</li>
-                                <li>Encuentranos en Rio Imperial 6969</li>
+                                <li>13 finos</li>
+                                <li>Robamos terrible maldito y de menor</li>
                             </ul>
                         </div>
                     </div>
@@ -147,7 +148,7 @@
             </div>
         </div>
         <div class="grupo-2">
-            <small>&copy; 2022 <b>MASTER BIKES</b> - Todos los Derechos Reservados.</small>
+            <small>&copy; 2022 <b>HSC Componentes</b> - Todos los Derechos Reservados.</small>
         </div>
     </footer>
     
